--- a/Restaurante_APP/Content/Site.css
+++ b/Restaurante_APP/Content/Site.css
@@ -4,6 +4,18 @@
     border-color: #777;
 }
 
+fieldset.scheduler-border {
+    border: solid 2px #DDD !important;
+    padding: 0 10px 10px 10px;
+    border-bottom: none;
+}
+
+legend.scheduler-border {
+    width: auto !important;
+    border: none;
+    font-size: 14px;
+}
+
 body {
     padding-top: 50px;
     padding-bottom: 20px;
