--- a/Restaurante_APP/Views/Shared/_Layout.cshtml
+++ b/Restaurante_APP/Views/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
         <div class="container">
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Restaurante", "Index", "Restaurante")</li>
-                    <li>@Html.ActionLink("Pratos", "Index", "Menu")</li>
+                    <li>@Html.ActionLink("Home", "Read", "Home")</li>
+                    <li>@Html.ActionLink("Restaurante", "Read", "Restaurante")</li>
+                    <li>@Html.ActionLink("Pratos", "Read", "Menu")</li>
                 </ul>
             </div>
         </div>
