--- a/Restaurante_APP/Content/Site.css
+++ b/Restaurante_APP/Content/Site.css
@@ -1,9 +1,11 @@
-﻿.navbar-custom {
+﻿/* Barra de navegacao branca com texto preto*/
+.navbar-custom {
     color: black;
     background-color: #fff;
     border-color: #777;
 }
 
+/* Fieldset*/
 fieldset.scheduler-border {
     border: solid 2px #DDD !important;
     padding: 0 10px 10px 10px;
@@ -14,6 +16,77 @@ legend.scheduler-border {
     width: auto !important;
     border: none;
     font-size: 14px;
+}
+
+/* Cores botoes */
+.button-green {
+    background-color: green;
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.button-red {
+    background-color: red;
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+/* Cor icone*/
+.icon-red {
+    color: red;
+}
+
+.icon-blue {
+    color: blue;
+}
+
+/* Tabela design */
+div.scroll {
+    background-color: #ffffff;
+    width: 600px;
+    height: 300px;
+    overflow: auto;
+}
+
+table.restaurante {
+    background-color: #e7e7e7;
+    border-collapse: collapse;
+    width: 100%;
+    heigth: 100%;
+}
+
+th.icon {
+    text-align: right;
+    width: 40px;
+    background-color: #cdcdcd;
+}
+
+th.restaurante {
+    text-align: left;
+    background-color: #cdcdcd;
+}
+
+td.restaurante {
+    text-align: left;
+    padding: 5px;
+}
+
+tr.restaurante:nth-child(even) {
+    background-color: #f5f5f5;
 }
 
 body {
