Nav Bar, fieldSet, form, p, error

--- a/Restaurante_APP/Views/Home/Read.cshtml
+++ b/Restaurante_APP/Views/Home/Read.cshtml
@@ -3,10 +3,12 @@
     ViewBag.Title = "Home";
 }
 
-<div class="text-center">
-    <br />
-    <br />
-    <br />
-    <img src="~/Content/home_picture.jpg"  class="img-rounded" alt="Cinque Terre" width="400" height="300"/>
-    <h2>SISTEMA DE CADASTRO DE RESTAURANTES</h2>
+<div class="body-content">
+    <div class="text-center">
+        <br />
+        <br />
+        <br />
+        <img src="~/Content/home_picture.jpg" class="img-rounded" alt="Cinque Terre" width="400" height="300" />
+        <h2>SISTEMA DE CADASTRO DE RESTAURANTES</h2>
+    </div>
 </div>
