--- a/Restaurante_APP/Views/Shared/_Layout.cshtml
+++ b/Restaurante_APP/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top navbar-custom">
+    <div class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -30,3 +30,4 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+    
