--- a/Restaurante_APP/Content/Site.css
+++ b/Restaurante_APP/Content/Site.css
@@ -2,20 +2,25 @@
 .navbar-custom {
     color: black;
     background-color: #fff;
-    border-color: #777;
+    border-color: #000;
+    border: solid 2px !important;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 /* Fieldset*/
 fieldset.scheduler-border {
-    border: solid 2px #DDD !important;
+    border-color: #000;
+    border: solid 2px !important;
     padding: 0 10px 10px 10px;
-    border-bottom: none;
+    border-bottom: yes;
 }
 
 legend.scheduler-border {
     width: auto !important;
     border: none;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 /* Cores botoes */
@@ -29,7 +34,6 @@ legend.scheduler-border {
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    cursor: pointer;
 }
 
 .button-red {
@@ -42,7 +46,6 @@ legend.scheduler-border {
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    cursor: pointer;
 }
 
 /* Cor icone*/
@@ -57,7 +60,7 @@ legend.scheduler-border {
 /* Tabela design */
 div.scroll {
     background-color: #ffffff;
-    width: 600px;
+    width: 1050px;
     height: 300px;
     overflow: auto;
 }
@@ -66,18 +69,18 @@ table.restaurante {
     background-color: #e7e7e7;
     border-collapse: collapse;
     width: 100%;
-    heigth: 100%;
 }
 
 th.icon {
     text-align: right;
-    width: 40px;
+    width: 60px;
     background-color: #cdcdcd;
 }
 
 th.restaurante {
     text-align: left;
     background-color: #cdcdcd;
+    font-size: 18px;
 }
 
 td.restaurante {
@@ -89,15 +92,33 @@ tr.restaurante:nth-child(even) {
     background-color: #f5f5f5;
 }
 
+div.form-indent{
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+div.div-error{
+    font-size: 12px;
+    font-weight: normal;
+    color: #f00;
+    display:inline;
+}
+
+p.p-label-error{
+    display: inline;
+}
+
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -111,5 +132,5 @@ body {
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 580px;
 }
