--- a/Restaurante_APP/Views/Restaurante/Create.cshtml
+++ b/Restaurante_APP/Views/Restaurante/Create.cshtml
@@ -3,29 +3,30 @@
     ViewBag.Title = "Create Restaurante";
 }
 
-<div>
+<div class="body-content">
     <br />
     <h2>CADASTRO DE RESTAURANTE</h2>
     <fieldset class="scheduler-border">
         <legend  class="scheduler-border">Dados</legend>
         @using (Html.BeginForm(FormMethod.Post))
         {
-            @Html.AntiForgeryToken()
-            <p>Nome do restaurante</p>
+            <div class="form-indent">
+                @Html.AntiForgeryToken()
+                <p class="p-label-error">Nome do restaurante</p>
+                <div class="div-error">
+                    @Html.ValidationMessageFor(model => model.restaurante_name)
+                </div>
+                @Html.EditorFor(model => model.restaurante_name, new { htmlAttributes = new { @class = "form-control" } })
+                <br />
 
-            <div>
-                @Html.EditorFor(model => model.restaurante_name)
-                @Html.ValidationMessageFor(model => model.restaurante_name)
+                <a href="/Restaurante/Read" class="btn btn-primary button-red">
+                    <span class="glyphicon glyphicon-remove"></span> Cancelar
+                </a>
+                <button type="submit" class="btn btn-primary button-green">
+                    <span class="glyphicon glyphicon-floppy-save"></span> Salvar
+                </button>
             </div>
-            <br />
-    
-            <a href="/Restaurante/Read" class="btn btn-primary button-red">
-                <span class="glyphicon glyphicon-remove"></span> Cancelar
-            </a>
-            <button type="submit" class="btn btn-primary button-green">
-                <span class="glyphicon glyphicon-floppy-save"></span> Salvar
-            </button>
-        }
+            }
     </fieldset>
 </div>
 
