--- a/Restaurante_APP/Views/Menu/Read-name.cshtml
+++ b/Restaurante_APP/Views/Menu/Read-name.cshtml
@@ -7,11 +7,13 @@
     <br />
     <h2>PRATOS</h2>
     <br />
-    <a class="btn btn-primary button-green" href="/Menu/Create">
-        <span class="glyphicon glyphicon-plus"> Cadastrar novo prato </span>
+    <a class="btn btn-success button-green" href="/Menu/Create">
+        <span class="glyphicon glyphicon-plus"> Cadastrar Novo Prato </span>
     </a>
 
     <br />
+    <br />
+    <p>@ViewBag.MsgUpdate</p>
     <br />
     <div class="scroll">
         <table class="restaurante">
