--- a/Restaurante_APP/Views/Shared/_Layout.cshtml
+++ b/Restaurante_APP/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
     <div class="container body-content">
         @RenderBody()
     </div>
+    <div>
+        <footer class="navbar-fixed-bottom text-center" style="color: #777; font-weight: normal" >
+            <hr />
+            <p>Prova prática - Cedro technologies - Cecília Carneiro e Silva - 30/03/2017</p>
+        </footer>
+    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
