--- a/Restaurante_APP/Views/Menu/Create.cshtml
+++ b/Restaurante_APP/Views/Menu/Create.cshtml
@@ -15,7 +15,10 @@
                 <div class="form-indent">
                     @Html.AntiForgeryToken()
 
-                    <p>Restaurante</p>
+                    <p class="p-label-error">Restaurante</p>
+                    <div class="div-error">
+                        <p class="p-label-error">@ViewBag.MsgID</p>
+                   </div>
                     @Html.DropDownList("restaurante_id", null, htmlAttributes: new { @class = "form-control"})
 
                     <br />
@@ -33,10 +36,11 @@
                     @Html.EditorFor(model => model.preco, new { htmlAttributes = new { @class = "form-control" } })
                    
                     <br />
-                    <a class="btn btn-primary button-red" href="/Menu/Read">
+                    <a class="btn btn-danger button-red" href="/Menu/Read">
                         <span class="glyphicon glyphicon-remove"> Cancelar</span>
                     </a>
-                    <button type="submit" class="btn btn-primary button-green">
+                    &nbsp;&nbsp;&nbsp;
+                    <button type="submit" class="btn btn-success button-green">
                         <span class="glyphicon glyphicon-floppy-disk"> Salvar</span>
                     </button>
                 </div>
