--- a/Restaurante_APP/Views/Menu/Update.cshtml
+++ b/Restaurante_APP/Views/Menu/Update.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Update - Prato";
 }
 
-<div>
+<div class="body-content">
     <br />
     <h2>
         CADASTRO DE PRATO
@@ -13,26 +13,34 @@
         <legend class="scheduler-border">Dados</legend>
         @using (Html.BeginForm(FormMethod.Post))
         {
-            @Html.HiddenFor(model => model.prato_id)
+            <div class="form-indent">
+                @Html.HiddenFor(model => model.prato_id)
 
-            <p>Restaurante</p>
-            @Html.DropDownList("restaurante_id")
+                <p>Restaurante</p>
+                @Html.DropDownList("restaurante_id", null, htmlAttributes: new { @class = "form-control"})
 
-            <p>Prato</p>
-            @Html.EditorFor(model => model.prato_name, Model.prato_name)
-            @Html.ValidationMessageFor(model => model.prato_name)
+                <p class="p-label-error">Prato</p>
+                <div class="div-error">
+                    @Html.ValidationMessageFor(model => model.prato_name)
+                </div>
+                @Html.EditorFor(model => model.prato_name, Model.prato_name, 
+                                   new { htmlAttributes = new { @class = "form-control" } })
 
-            <p>Preço</p>
-            @Html.EditorFor(model => model.preco, Model.preco)
-            @Html.ValidationMessageFor(model => model.preco)
+                <p class="p-label-error">Preço</p>
+                <div>
+                    @Html.ValidationMessageFor(model => model.preco)
+                </div>
+                @Html.EditorFor(model => model.preco, Model.preco.ToString(),
+                                new { htmlAttributes = new { @class = "form-control" } }) 
 
-            <br />
-            <a class="btn btn-primary button-red" href="/Menu/Read">
-                <span class="glyphicon glyphicon-remove"> Cancelar</span>
-            </a>
-            <button type="submit" class="btn btn-primary button-green">
-                <span class="glyphicon glyphicon-floppy-disk"> Salvar</span>
-            </button>
+                <br />
+                <a class="btn btn-primary button-red" href="/Menu/Read">
+                    <span class="glyphicon glyphicon-remove"> Cancelar</span>
+                </a>
+                <button type="submit" class="btn btn-primary button-green">
+                    <span class="glyphicon glyphicon-floppy-disk"> Salvar</span>
+                </button>
+            </div>
         }
 
     </fieldset>
