--- a/Restaurante_APP/Views/Restaurante/Read.cshtml
+++ b/Restaurante_APP/Views/Restaurante/Read.cshtml
@@ -15,10 +15,11 @@
                     <p>Nome</p>
                     <input type="text" name="r_name" class="form-control"/>
                     <br />
-                    <button type="submit" class="btn btn-primary">
+                    <button type="submit" class="btn btn-primary button-blue">
                         <span class="glyphicon glyphicon-search"> Pesquisar</span>
                     </button>
-                    <a href="~/Restaurante/Create" class="btn btn-primary button-green">
+                    &nbsp; &nbsp;&nbsp;
+                    <a href="~/Restaurante/Create" class="btn btn-success button-green">
                         <span class="glyphicon glyphicon-plus"> Cadastrar Novo Restaurante</span>
                     </a>
                 </div>
