Views - melhorando estetica

--- a/Restaurante_APP/Views/Menu/Read-name.cshtml
+++ b/Restaurante_APP/Views/Menu/Read-name.cshtml
@@ -22,7 +22,7 @@
                 <th class="icon"> </th>
                 <th class="restaurante">Restaurante</th>
                 <th class="restaurante">Prato</th>
-                <th class="restaurante">Preço</th>
+                <th class="restaurante">Preço(R$)</th>
             </tr>
             @foreach (var item in Model)
             {
