--- a/Restaurante_APP/Views/Menu/Create.cshtml
+++ b/Restaurante_APP/Views/Menu/Create.cshtml
@@ -29,7 +29,7 @@
                     @Html.EditorFor(model => model.prato_name, new { htmlAttributes = new { @class = "form-control" } })
                                         
                     <br />
-                    <p class="p-label-error">Preço</p>
+                    <p class="p-label-error">Preço(R$)</p>
                     <div class="div-error">
                         @Html.ValidationMessageFor(model => model.preco)
                     </div>
