--- a/Restaurante_APP/Views/Restaurante/Update.cshtml
+++ b/Restaurante_APP/Views/Restaurante/Update.cshtml
@@ -22,10 +22,11 @@
                 
                 <br />
 
-                <a href="/Restaurante/Read" class="btn btn-primary button-red">
+                <a href="/Restaurante/Read" class="btn btn-danger button-red">
                     <span class="glyphicon glyphicon-remove"></span> Cancelar
                 </a>
-                <button type="submit" class="btn btn-primary button-green">
+                &nbsp;&nbsp;&nbsp;
+                <button type="submit" class="btn btn-success button-green">
                     <span class="glyphicon glyphicon-floppy-save"></span> Salvar
                 </button>
             </div>
