--- a/Restaurante_APP/Views/Restaurante/Read.cshtml
+++ b/Restaurante_APP/Views/Restaurante/Read.cshtml
@@ -13,7 +13,7 @@
             {
                 <div class="form-indent">
                     <p>Nome</p>
-                    <input type="text" name="r_name" class="form-control"/>
+                    <input type="text" name="r_name" value=@ViewBag.str_search class="form-control"/>
                     <br />
                     <button type="submit" class="btn btn-primary button-blue">
                         <span class="glyphicon glyphicon-search"> Pesquisar</span>
